--- a/license-admin.html
+++ b/license-admin.html
@@ -777,7 +777,7 @@
 
                     // Initialize EmailJS (sostituisci con le tue credenziali)
                     // ⚠️ SOSTITUIRE: User ID da dashboard.emailjs.com → Integration → Your Public Key
-                    emailjs.init("user_TUO_PUBLIC_KEY");
+                    emailjs.init("ejIPVqg_Vj58wR99m");
 
                     // Prepara template parameters (sintassi EmailJS corretta)
                     const templateParams = {
