--- a/siteworld-register.html
+++ b/siteworld-register.html
@@ -430,7 +430,7 @@
                 </div>
                 <div class="requirement-item">
                     <i class="fas fa-rocket"></i>
-                    <span>Possibilità di influezare lo sviluppo</span>
+                    <span>Possibilità di influenzare lo sviluppo</span>
                 </div>
                 <div class="requirement-item">
                     <i class="fas fa-gift"></i>
