Deleting developing files and adding some ifnormations

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                         <span style="background: rgba(255, 215, 0, 0.2); color: #ffd700; padding: 0.3rem 0.8rem; border-radius: 12px; font-size: 0.8rem; margin-right: 0.5rem;">Newsletter</span>
                         <span style="background: rgba(0, 255, 136, 0.2); color: var(--accent-neon); padding: 0.3rem 0.8rem; border-radius: 12px; font-size: 0.8rem;">Free</span>
                     </div>
-                    <a href="mailto:sitworldweb@gmail.com?subject=Iscrizione Newsletter" class="cyber-btn">
+                    <a href="mailto:siteworldweb@gmail.com?subject=Iscrizione Newsletter" class="cyber-btn">
                         📬 ISCRIVITI_GRATIS
                     </a>
                 </div>
@@ -521,7 +521,7 @@
                     <a href="https://discord.gg/P5HRjAwgdZ" target="_blank" class="discord-btn">
                         🎮 JOIN_DISCORD
                     </a>
-                    <a href="mailto:sitworldweb@gmail.com?subject=Support Request" class="cyber-btn">
+                    <a href="mailto:siteworldweb@gmail.com?subject=Support Request" class="cyber-btn">
                         📧 EMAIL_SUPPORT
                     </a>
                 </div>
@@ -545,7 +545,7 @@
                 <p style="font-size: 1.1rem; margin-bottom: 2rem; color: var(--text-secondary);">
                     Hai un progetto innovativo? Connettiamoci.
                 </p>
-                <a href="mailto:sitworldweb@gmail.com">sitworldweb@gmail.com</a>
+                <a href="mailto:siteworldweb@gmail.com">sitworldweb@gmail.com</a>
             </div>
         </div>
     </section>
