--- a/wp-maintenance.html
+++ b/wp-maintenance.html
@@ -326,7 +326,7 @@
                 <div class="cyber-btn" style="font-size: 1.2rem; margin-right: 1rem; background: linear-gradient(45deg, rgba(255, 149, 0, 0.2), rgba(6, 182, 212, 0.2)); border: 2px solid var(--accent-yellow); cursor: default;">
                     ✨ SITEWORLD ID - COMING SOON ✨
                 </div>
-                <a href="mailto:sitworldweb@gmail.com?subject=Beta Access Request - WP Maintenance Pro&body=Ciao Lorenzo,%0A%0ASono interessato ad accedere alla beta di WP Maintenance Pro.%0A%0ANome:%0AEmail:%0ASito web:%0AEsperienza con WordPress:%0A%0AGrazie!" class="cyber-btn" style="font-size: 1.1rem; background: var(--bg-secondary); border: 2px solid var(--accent-purple);">
+                <a href="mailto:siteworldweb@gmail.com?subject=Beta Access Request - WP Maintenance Pro&body=Ciao Lorenzo,%0A%0ASono interessato ad accedere alla beta di WP Maintenance Pro.%0A%0ANome:%0AEmail:%0ASito web:%0AEsperienza con WordPress:%0A%0AGrazie!" class="cyber-btn" style="font-size: 1.1rem; background: var(--bg-secondary); border: 2px solid var(--accent-purple);">
                     📧 RICHIESTA_VIA_EMAIL
                 </a>
             </div>
