--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <img src="logo.png" alt="Lorenzo Agosta Logo" style="height: 47px; vertical-align: middle; margin-right: 0.5rem;">
         </div>
         <div class="top-bar-center">
-            LORENZO AGOSTA ✨ DEVELOPER
+            LORENZO_AGOSTA
         </div>
         <div class="top-bar-actions">
             <a href="#blog" class="top-bar-btn">
