Added new elements to the roadmap

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 <p style="font-size: 1.1rem; margin-bottom: 2rem; color: var(--text-secondary);">
                     Hai un progetto innovativo? Connettiamoci.
                 </p>
-                <a href="mailto:siteworldweb@gmail.com">sitworldweb@gmail.com</a>
+                <a href="mailto:siteworldweb@gmail.com">siteworldweb@gmail.com</a>
             </div>
         </div>
     </section>
