added the last update code

--- a/roadmap.html
+++ b/roadmap.html
@@ -298,7 +298,7 @@
             <h1>WP CHANGELOG MANAGER ROADMAP</h1>
             <p class="header-subtitle">WP Changelog Manager is a live project, and target dates are subject to change.<br>Expect target updates each quarter for planned features and new surprises.</p>
             <div class="header-update">
-                LAST UPDATE: December 31st 2025 - LATEST RELEASE: v1.0.0
+                LAST UPDATE: January 13rd 2026 - LATEST RELEASE: v1.0.0
             </div>
         </div>
         
